Enabled decryption with dKey

--- a/ADHDTech.CiscoCrypt/ADHDTech.CiscoCrypt.csproj
+++ b/ADHDTech.CiscoCrypt/ADHDTech.CiscoCrypt.csproj
@@ -46,6 +46,12 @@
     <Compile Include="platformConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Renci.SshNet\Renci.SshNet.csproj">
+      <Project>{2f5f8c90-0bd1-424f-997c-7bc6280919d1}</Project>
+      <Name>Renci.SshNet</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
