--- a/ADHDTech.UCOSPasswordDecrypter/UCOS Password Decrypter.csproj
+++ b/ADHDTech.UCOSPasswordDecrypter/UCOS Password Decrypter.csproj
@@ -74,11 +74,11 @@
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
     <Compile Include="Class1.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="frmSelectUCOSHost.cs">
       <SubType>Form</SubType>
@@ -97,8 +97,8 @@
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSelectUCOSHost.resx">
       <DependentUpon>frmSelectUCOSHost.cs</DependentUpon>
@@ -159,10 +159,6 @@
       <Project>{86c632f6-c599-4370-80af-3fb963a2742c}</Project>
       <Name>ADHDTech.CiscoCrypt</Name>
       <EmbedInteropTypes>False</EmbedInteropTypes>
-    </ProjectReference>
-    <ProjectReference Include="..\ADHDTech.CiscoSCP\ADHDTech.CiscoSCP.csproj">
-      <Project>{87b03cde-7e9a-414b-b47c-e1b76e52bcf6}</Project>
-      <Name>ADHDTech.CiscoSCP</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
